# parton_splittings_full

./: 1Dkernel.ipynb  CMakeLists.txt  README.md  full_sim.cpp  integral_tests.ipynb  script_j.sh  test
cmakes/: CMakeLists_g.txt
src/: Physis.cpp  Physis.hpp  Physis_J.cpp  Physis_J.hpp  derivatives.cpp  derivatives.hpp  faber.cpp  faber.hpp  hamiltonian.cpp  hamiltonian.cu  hamiltonian.hpp  hamiltonian_j.cpp  hamiltonian_j.hpp  test  tests.cpp
src/bessel-library/: bessel-library.hpp
untracked/: 1Dkernel.ipynb  notebook_plots.ipynb  spectrum.ipynb
